; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_list_vulkan_device_layers.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_list_vulkan_device_layers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32, i8* }

@.str = private unnamed_addr constant [23 x i8] c"Vulkan device layers:\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c" %s (spec version %u) \22%s\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @list_vulkan_device_layers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_vulkan_device_layers(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @vkEnumerateDeviceLayerProperties(i32 %9, i64* %5, %struct.TYPE_5__* null)
  %11 = load i64, i64* %5, align 8
  %12 = call %struct.TYPE_5__* @calloc(i64 %11, i32 24)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %6, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %15 = call i32 @vkEnumerateDeviceLayerProperties(i32 %13, i64* %5, %struct.TYPE_5__* %14)
  store i64 0, i64* %7, align 8
  br label %16

16:                                               ; preds = %38, %2
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %41

20:                                               ; preds = %16
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %27 = load i64, i64* %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = ashr i32 %30, 22
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %33 = load i64, i64* %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 2
  %36 = load i8*, i8** %35, align 8
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8* %25, i32 %31, i8* %36)
  br label %38

38:                                               ; preds = %20
  %39 = load i64, i64* %7, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %7, align 8
  br label %16

41:                                               ; preds = %16
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %43 = call i32 @free(%struct.TYPE_5__* %42)
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @vkEnumerateDeviceLayerProperties(i32, i64*, %struct.TYPE_5__*) #1

declare dso_local %struct.TYPE_5__* @calloc(i64, i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
